<resources>
    <string name="app_name">EM17mobile</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">EM17mobile - Login</string>
    <string name="password_dimenticata"><u>Password dimenticata</u></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="biglietto_non_valido">Biglietto non valido</string>
    <string name="title_activity_forgot_pass_view">ForgotPassView</string>
    <string name="forgot_password">Password Dimenticata</string>
    <string name="insert_email_for_forgotted_password">Inserire l\'email per il recupero password</string>
    <string name="send_email_for_forgotted_password">Invia email</string>
    <string name="next">Avanti</string>
</resources>
